# aZero-Input

./: CMakeLists.txt  CMakePresets.json  README.md
examples/: main.cpp
include/: aZeroInput.hpp
src/: DeviceManager.hpp  aZeroInput.cpp
src/devices/: Gamepad.hpp  Keyboard.hpp  Mouse.hpp
